<resources>
    <string name="app_name">KuToko</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_search">Cari UMKM</string>
    <string name="title_profile">User Profile</string>
    <string name="title_cari">Cari</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_favorite">Favorite</string>
    <string name="alamat_saat_ini"><b>Alamat Saat Ini</b></string>
    <string name="ganti_lokasi">Ganti Lokasi ?</string>
    <string name="umkm_sekitar">UMKM Di Sekitar</string>
    <string name="umkm_rekomendasi">Rekomendasi Untuk Kamu</string>
    <string name="umkm_terlaris">UMKM Terlaris</string>
    <string name="temukan_umkm">Temukan UMKM Mu Disini ....</string>
    <string name="buka_umkm">Buka Toko UMKM ?</string>
    <string name="toko_saya">Toko Saya</string>
    <string name="alamat_saya">Alamat Saya</string>
    <string name="akun_dan_keamanan">Akun &amp; Keamanan</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="punya_akun">Belum Punya Akun ?</string>
    <string name="daftar_sekarang">Daftar Sekarang !!!</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="invalid_email">Alamat Email Invalid</string>
    <string name="invalid_sandi">Kata Sandi Invalid \nMinimal 8 Huruf dan Tidak Ada Spasi</string>
    <string name="kolom_kosong">Kolom Tidak Boleh Kosong</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>

    <!--dummy-->
    <string name="dummy_address">69MX+9QC, Jl. Garboruci, Dabag, Condongcatur, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</string>
    <string name="dummy_name">Dedi Yanto</string>

    <string name="nProduk">Nama Produk</string>
    <string name="nToko">Nama Toko</string>
    <string name="jarakToko">10km</string>
    <string name="kategoriToko">Kategori Toko</string>
    <string name="ratingToko">5.0</string>
    <string name="jumlahRating">999</string>
    <string name="ratingText">ratings</string>
    <string name="retry">COBA LAGI !!</string>

    <string name="detailUpvote">%d UpVote</string>

    <string name="fetchMap">Sedang Mendapatkan Lokasi Mu !!</string>
    <string name="tab_text_1">Produk</string>
    <string name="tab_text_2">Informasi</string>
    <string name="lokasi_penjual">Lokasi Penjual</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="logout">Logout</string>

    <string name="lokasi_saatini">Lokasi Saat Ini</string>
    <string name="detailAddress">Detail</string>
    <string name="lokasi_lain">Lokasi Lain</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="jadikan_utama">Jadikan Utama</string>
    <string name="addLocation">Masukan Lokasi Ini</string>
    <string name="data_produk_kosong">Data Produk Kosong</string>
    <string name="favorite_click">Button Favorite Clicked</string>
    <string name="bisnis_serupa">Bisnis yang Serupa</string>
    <string name="text_tidak_dapat_ditemukan">%s tidak dapat ditemukan</string>
    <string name="title_mystore">Toko Saya</string>
    <string name="title_orderanku">Orderan Ku</string>
    <string name="title_beranda_toko_saya">Toko Saya</string>
    <string name="myProducts">Produk Saya</string>
    <string name="harga_produk">150000</string>
    <string name="edit">Edit Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="title_activity_move_to_my_store">MoveToMyStore</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="desc_produk">Deskripsi Produk</string>
    <string name="foto_produk">Foto Produk</string>
    <string name="upload_image">unggah foto</string>
    <string name="input_harga">Harga Produk</string>
    <string name="update_produk">Update Produk</string>
    <string name="delete_produk">Delete Produk</string>


</resources>