<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:backgroundTint="#FFFFFF"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_beranda"
        android:tint="#FFFFFF"
        android:title="@string/title_beranda"
        android:tooltipText="@string/title_beranda" />

    <item
        android:id="@+id/navigation_cari"
        android:backgroundTint="#FFFFFF"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_search_white"
        android:tint="#FFFFFF"
        android:title="@string/title_cari"
        android:tooltipText="@string/title_cari" />

    <!--
    <item
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/ic_riwayat"
        android:title="@string/title_riwayat" />
    -->

    <item
        android:id="@+id/navigation_favorite"
        android:backgroundTint="#FFFFFF"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_favorite"
        android:tint="#FFFFFF"
        android:title="@string/title_favorite"
        android:tooltipText="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:backgroundTint="#FFFFFF"
        android:color="#FFFFFF"
        android:icon="@drawable/ic_user"
        android:tint="#FFFFFF"
        android:title="@string/title_profile"
        android:tooltipText="@string/title_profile" />

</menu>