<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <!--Img + Nama-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/main">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@tools:sample/avatars"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            tools:text="@string/dummy_name"/>

        <!--Button-->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/bg_search">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/main"
                android:text="@string/buka_umkm"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_right_arrow"/>
        </LinearLayout>
    </LinearLayout>

    <!--Toko Saya-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_shop"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_kotak"
        android:text="@string/toko_saya"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <!--Alamat Saya-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_map"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_kotak"
        android:text="@string/alamat_saya"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <!--Akun dan Keamanan-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_user_black"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_kotak"
        android:text="@string/akun_dan_keamanan"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <!--Logout-->
    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_logout"
        android:drawableRight="@drawable/ic_right_arrow"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_kotak"
        android:text="@string/logout"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="20sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>