<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userLocation.LocationList"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi_saatini"
        android:textColor="@color/main"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_alamat_sekarang"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dummy_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi_lain"
        android:textColor="@color/main"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"/>

    <Button
        android:id="@+id/bt_tambah_lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:drawableLeft="@drawable/ic_baseline_add_circle_outline_24"
        android:text="@string/tambah_lokasi" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lokasi_lain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:listitem="@layout/location_item"/>

</LinearLayout>