<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

  <LinearLayout
      android:id="@+id/regist_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginBottom="250dp"
      app:layout_constraintVertical_bias="0.1"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/logo_kutoko"
        android:contentDescription="@string/toko_saya"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/regist_body"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/regist_logo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <EditText
        android:id="@+id/regist_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/username"
        android:autofillHints="name"
        android:drawableStart="@drawable/ic_at"
        android:background="@drawable/bg_kotak"
        android:inputType="text"/>

    <EditText
        android:id="@+id/regist_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/nama"
        android:autofillHints="name"
        android:inputType="text"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:background="@drawable/bg_kotak"/>

    <com.example.kutoko.ui.customview.CustomEmail
        android:id="@+id/regist_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_kotak"

        android:inputType="textEmailAddress"/>

    <com.example.kutoko.ui.customview.CustomPassword
        android:id="@+id/regist_sandi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_kotak"
        android:inputType="textPassword"/>

    <com.example.kutoko.ui.customview.CustomButton
        android:id="@+id/regist_btn"
        android:enabled="false"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/daftar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />
  </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>